--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,19 @@
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
+    "@beyonk/svelte-social-auth": "^3.0.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.4.0",
     "dotenv": "^16.0.3",
+    "node-sass": "^8.0.0",
     "rollup": "^3.15.0",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.2",
-    "svelte": "^3.55.0"
+    "svelte": "^3.55.0",
+    "svelte-preprocess": "^5.0.3"
   },
   "dependencies": {
     "axios": "^1.3.4",
